linphone-3.2.2 -- ?????????
	* improve bitrate usage of speex codec
	* allow speex to run with vbr (variable bit rate) mode
	* add speex/32000 (ultra wide band speex codec)
	* answer empty SIP INFO requests
	* reverse order of call logs

linphone-3.2.1 -- October 5, 2009
	* improve graphics and behaviour of mute button
	* updated translations
	* windows installer installs reg keys to indicate windows to start linphone clicking of sip uris
	* workaround a bug Gtk-macos X with modal popup windows, preventing to answer calls

linphone-3.2.0 -- September 17, 2009
	* new in-call layout
	* new idle view with two buttons
	* ability to dial the number from dialpad
	* improve local IP address detection when having multiple networks (ex: VPNs)
	* use proxy's received and rport params from via in Contact header when possible
	* port to mac os X leopard (using gtk/x11), audio only for now
	* DevC++ support now deprecated, use msys/mingw (see README.mingw for details)
	* add an option to ask linphone to place a call, whenever an instance is already running or not:
		should be useful for starting calls from a web browser recognizing the 'sip:' uri scheme.
	* french and italian translation updated
	* don't show ffmpeg codecs when encoder are disabled in ffmpeg library.
	* bugfixes in:
		- video4linux2 support
		- alsa support
		- socket leak in mtu discovery


linphone-3.1.2 -- May 5, 2009
	* make it work with lastest ffmpeg swscale
	* improve theora packer
	* update theora default settings to match performance of 1.0 release.
	* fix a random crash during video resizing on linux with SDL.

linphone-3.1.1 -- April 14, 2009
	* fix crash when opening property box, in some rare case
	* windows version uses the new libmsdscap plugin (video capture using directshow)
	* improved translations

linphone-3.1.0 -- March 16, 2009
	* linphone can now send large video pictures: up to SVGA, configurable via the user interface