@@ -1,9 +1,18 @@
+linphone-3.3.0 -- ?????????
+	* liblinphone is ported to iphoneOS and Google Android
+	* Internal refactoring of liblinphone (code factorisation, encapsulation
+		of signaling)
+	* enhancements made to presence support (SIP/SIMPLE)
+
 linphone-3.2.2 -- ?????????
 	* improve bitrate usage of speex codec
 	* allow speex to run with vbr (variable bit rate) mode
 	* add speex/32000 (ultra wide band speex codec)
 	* answer empty SIP INFO requests
 	* reverse order of call logs
+	* optimize video display
+	* manual or automatic network connectivity management (so that REGISTERs
+		are only sent when network is up or refreshed when it comes back)
 
 linphone-3.2.1 -- October 5, 2009
 	* improve graphics and behaviour of mute button
